--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PAYJP_PRIVATE_KEY = ‘sk_test_9931066098f8c99168e275fa’
-PAYJP_KEY = ‘pk_test_a296b9474efc6fddfb3e8943’
+PAYJP_PRIVATE_KEY = 'sk_test_9931066098f8c99168e275fa'
+PAYJP_KEY = 'pk_test_a296b9474efc6fddfb3e8943'
