--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PAYJP_PRIVATE_KEY = 'sk_test_9931066098f8c99168e275fa'
 PAYJP_KEY = 'pk_test_a296b9474efc6fddfb3e8943'
 
-FB_ID = '887513418380244'
-FB_SK = '55d87fc396ce0fb5271349573e52ec72'
+APP_ID = '1633700600120631'
+APP_SECRET = 'c467710a73a2168b598f92659354ed44'
